Added homepage key on package json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pick-me-ups",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kevinktom.github.io/Pick-me-ups/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -13,6 +14,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.21.0",
+    "gh-pages": "^3.1.0",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
