Changed homepage url

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pick-me-ups",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kevinktom.github.io/Pick-me-ups/",
+  "homepage": "https://kevinktom.github.io/pick-me-ups-page/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
